use minmax in grid auto rows property to prevent text overflow

--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body{
     background-color: aqua;
     padding: 25px;
     text-align: center;
+    border: 1px solid white;
 }
 .grid-container{
     display: grid;
     grid-template-columns: repeat(3,100px);
-    grid-auto-rows: 100px;
+    grid-auto-rows: minmax(100px,auto);
 }
